# carousel

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  carousel.cpp  carousel.h  circle-list.h  item.cpp  item.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
include/carousel/: carousel.h
lib/: carousel.cpp
tests/: CMakeLists.txt  main.cpp
